# TypeNoodle

./: .gitattributes  .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  LICENSE  README.md  tree.txt
.github/workflows/: ci.yml
assets/: TypeNoodle.ai
qml/: LoadingWindow.qml  Main.qml  Theme.qml
qml/components/: FontCard.qml  FontPreviewPane.qml  SearchBar.qml  Sidebar.qml  TopBar.qml
qml/pages/: LibraryPage.qml  SettingsPage.qml
resources/: Info.plist  resources.qrc
resources/fonts/: .gitkeep
src/: main.cpp  version.h  version.h.in
src/core/: FontCollection.cpp  FontCollection.h  FontInfo.cpp  FontInfo.h  FontManager.cpp  FontManager.h  PlatformFonts.cpp  PlatformFonts.h
src/models/: CollectionModel.cpp  CollectionModel.h  FontListModel.cpp  FontListModel.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h  SettingsManager.cpp  SettingsManager.h
